WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150068
REGRESSION(
r53318
): background-repeat: space with gradients doesn't render correctly
https://bugs.webkit.org/show_bug.cgi?id=150068
Summary
REGRESSION(r53318): background-repeat: space with gradients doesn't render co...
Simon Fraser (smfr)
Reported
2015-10-12 17:43:37 PDT
Created
attachment 262946
[details]
Testcase In attached test case, the last two boxes look wrong (and different from Chrome).
Attachments
Testcase
(1.22 KB, text/html)
2015-10-12 17:43 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(5.56 KB, patch)
2015-10-13 18:40 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Patch
(7.29 KB, patch)
2015-10-14 09:05 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-10-12 17:44:16 PDT
<
rdar://problem/23081477
>
Said Abou-Hallawa
Comment 2
2015-10-13 18:40:11 PDT
Created
attachment 263049
[details]
Patch
Simon Fraser (smfr)
Comment 3
2015-10-13 18:48:44 PDT
Comment on
attachment 263049
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=263049&action=review
> Source/WebCore/platform/graphics/GradientImage.cpp:66 > - m_gradient->adjustParametersForTiledDrawing(adjustedSize, adjustedSrcRect); > + > + if (spacing.isZero()) > + m_gradient->adjustParametersForTiledDrawing(adjustedSize, adjustedSrcRect);
I think it would be better to pass 'spacing' into Gradient::adjustParametersForTiledDrawing() and do the check there, since it makes the other decisions about adjustment.
Said Abou-Hallawa
Comment 4
2015-10-14 09:05:41 PDT
Created
attachment 263079
[details]
Patch
WebKit Commit Bot
Comment 5
2015-10-14 10:29:54 PDT
Comment on
attachment 263079
[details]
Patch Clearing flags on attachment: 263079 Committed
r191048
: <
http://trac.webkit.org/changeset/191048
>
WebKit Commit Bot
Comment 6
2015-10-14 10:29:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug