REGRESSION(r53318): background-repeat: space with gradients doesn't render correctly https://bugs.webkit.org/show_bug.cgi?id=150068

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2015-10-14
Reviewed by Simon Fraser.

Source/WebCore:

This is a regression of r53318 in which we were trying to make the pattern
of the gradient image as small as possible: 1-pixel wide or tall. But this
broke the rendering of the background image when container element has the
style background-repeat: space. The reason for this is tiling the gradient
image is done completely by CG. To do the tiling, we start by creating a
CGPattern by calling CGPatternCreate() which takes the rect of the pattern
and the step. If the width or the height of the pattern image is adjusted
to be 1-pixel wide or tall, that will force CG to leave a space after every
it draws the pattern image which is 1-pixel wide or tall which is wrong.

The fix is to disable this optimization altogether if the container element
has the style background-repeat: space.

Test: fast/gradients/background-image-repeat-space.html

* platform/graphics/Gradient.cpp:
(WebCore::Gradient::adjustParametersForTiledDrawing):
* platform/graphics/Gradient.h:
* platform/graphics/GradientImage.cpp:
(WebCore::GradientImage::drawPattern):

LayoutTests:

Ensure the gradient background-image is drawn correctly when it is repeated
with spaces.

* fast/gradients/background-image-repeat-space-expected.html: Added.
* fast/gradients/background-image-repeat-space.html: Added.

Canonical link: https://commits.webkit.org/168265@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191048 268f45cc-cd09-0410-ab3c-d52691b4dbfc